# astrobot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
bot/: __init__.py  config.py  main.py
bot/db/: connection.py  migrations.py
bot/domain/: enums.py  models.py
bot/handlers/: __init__.py  admin.py  common.py  forecast.py  locations.py  menu.py  menu_format.py  settings.py  start.py  subscription.py
bot/keyboards/: __init__.py  forecast.py  locations.py  menu.py  settings.py  subscription.py
bot/middlewares/: menu_state.py
bot/providers/: __init__.py  geocoding.py  open_meteo.py  weather_base.py
bot/repositories/: forecast_cache.py  locations.py  stats.py  subscriptions.py  users.py
bot/scheduler/: __init__.py  jobs.py  runner.py
bot/services/: forecast_service.py  location_service.py  report_formatter.py  scoring_service.py  subscription_service.py  timezones.py  user_service.py
bot/texts/: __init__.py  (+3 more)
docs/: manual-test-checklist.md
scripts/: run_migrations.py
tests/: test_admin_handler.py  test_app_smoke.py  test_config.py  test_domain_models.py  test_forecast_handler.py  test_forecast_service.py  test_keyboards.py  test_location_service.py  test_locations_handler.py  test_menu_format.py  test_menu_state_middleware.py  test_migration_script.py  test_open_meteo_provider.py  test_report_formatter.py  test_repositories.py  test_scheduler_jobs.py  test_scoring_service.py  test_settings_handler.py  test_start_handler.py  test_subscription_handler.py  test_subscription_service.py
(+6 files in other folders)
